@@ -1,5 +1,10 @@
 <h1>News</h1>
 
+<h2>Version 0.8.6</h2>
+<p>Xjadeo now explicitly request single-screen fullscreen on OSX.
+Linux binaries no longer require JACK to be installed.
+</p>
+
 <h2>Version 0.8.5</h2>
 <p>Update video-decoder library:
 Add support for upcoming ffmpeg-2.9, use ffmpeg-2.8.2 for binaries.
