@@ -1,5 +1,5 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.3.
-.TH XJADEO "1" "November 2015" "xjadeo version 0.8.5" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.4.
+.TH XJADEO "1" "November 2016" "xjadeo version 0.8.6" "User Commands"
 .SH NAME
 xjadeo \- X Jack Video Monitor
 .SH SYNOPSIS
@@ -356,9 +356,9 @@ Report bugs at <https://github.com/x42/xjadeo/issues>
 Website: <http://xjadeo.sf.net/>
 .TP
 built from:
-scm\-v0.8.5
+scm\-v0.8.6
 .IP
-compiled with: AVFORMAT=0x382865 AVCODEC=0x383c64 AVUTIL:0x361f64
+compiled with: AVFORMAT=0x392964 AVCODEC=0x393065 AVUTIL:0x371c64
 configuration: [ LTC JACK\-SESSION POSIX\-MQueue OSC ]
 .br
 MTC/MIDI:      [ jack\-midi alsa\-sequencer portmidi alsa\-raw ]
